--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,10 +26,6 @@ const { title } = Astro.props;
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Hurricane&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap"
-			rel="stylesheet"
-		/>
 
 		<link
 			href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
@@ -40,6 +36,9 @@ const { title } = Astro.props;
 			href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
 			rel="stylesheet"
 		/>
+
+
+<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
 
 		<title>{title}</title>
 	</head>
@@ -66,18 +65,23 @@ const { title } = Astro.props;
 			--dropdown-border: rgba(255, 255, 255, 0.1);
 		}
 		body {
-			font-family: "Manrope", sans-serif;
+			font-family: "Plus Jakarta Sans", sans-serif;
 			font-optical-sizing: auto;
 			font-weight: 400;
 			font-style: normal;
 			letter-spacing: -0.2px;
 			/* font-family: "Girol";  */
-			background: rgb(249 250 251);
+			background: #f6f6f6;
 		}
 
 		html {
 			box-sizing: border-box;
 			scroll-behavior: smooth;
+		}
+
+		.italic{
+			font-family: "Plus Jakarta Sans", sans-serif;
+			font-style: italic;
 		}
 
 		a {
@@ -106,26 +110,37 @@ const { title } = Astro.props;
 		}
 
 		h1 {
-			font-family: "Rethink Sans", sans-serif;
-			font-weight: 700;
+			font-family: "Plus Jakarta Sans", sans-serif;
+			font-weight: 600;
+			font-size: 4rem;
 			color: #181526;
 			letter-spacing: -0.5px;
+			line-height: 4rem;
 			text-wrap: balance;
 		}
 
 		h2 {
-			font-family: "Rethink Sans", sans-serif;
-			font-weight: 700;
+			font-family: "Plus Jakarta Sans", sans-serif;
+			font-weight: 500;
 			letter-spacing: -0.5px;
-			color: #181526;
-			font-weight: 700;
 			font-size: 3rem /* 60px */;
 			line-height: 1;
 			text-wrap: balance;
+			color: #181526;
+		}
+
+		h3 {
+			font-family: "Plus Jakarta Sans", sans-serif;
+			font-weight: 600;
+			letter-spacing: -0.5px;
+			font-size: 1.5rem /* 60px */;
+			line-height: 1;
+			text-wrap: balance;
+			color: #181526;
 		}
 
 		h5 {
-			font-family: "Manrope", sans-serif;
+			font-family: "Plus Jakarta Sans", sans-serif;
 			font-weight: 400;
 			letter-spacing: -0.2px;
 			color: #74737c;
