--- a/src/components/hosting_cloud/SubmenuHostingCloud.astro
+++ b/src/components/hosting_cloud/SubmenuHostingCloud.astro
@@ -46,7 +46,7 @@
             </a>
         </li>
         <li class="hover__color">
-            <a class="group" href="/dominios/">
+            <a class="group" href="https://panel.servistream.net/order/shop?catid=1280d163-9e23-7d43-e78b-64610589e572">
                 <p
                     class="color__principal font-semibold barra__color rounded-md px-1 inline-block"
                 >
