--- a/src/pages/hosting-cloud.astro
+++ b/src/pages/hosting-cloud.astro
@@ -255,7 +255,7 @@ import BotonDos from "../components/BotonDos.astro";
 
 <style lang="scss">
     header {
-        background-image: url(../img/young-people-urban-city-lifestyle-street-outdoor-2022-12-16-02-32-23-utc.avif);
+        background-image: url(../img/back7.avif);
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
