--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
 		/>
 		<meta
 			name="keywords"
-			content="streaming, radio, tv, hosting web, reseller hosting, certificados ssl, correo empresarial"
+			content="streaming, radio, tv, hosting web, reseller hosting, certificados ssl, correo empresarial, streaming facebook, streaming ecuador, streaming tv, audio real, ecuador, streaming movil, streaming celulares, radio web, radio online, medios online, radios ecuador, radios fm, streaming radios, medios ecuador, arcotel, cordicom, frecuencias fm, streaming xhd, radio cloud, streaming cloud, streaming radio, streaming redes sociales, tricaster ecuador, OTT,streaming 4k, tv online, ip tv, encoder video, tv ecuador, streamingtv, canal tv, propia tv, video hd, transmitir video, video streaming ecuador, decoder video, canal online, canal tv online, full hd, capturadora video, streaming hd, streaming full hd, hosting ecuador, hosting empresarial, hosting dedicado, cpanel ecuador, node js, contenedores docker, virtualizacion ecuador, soluciones empresariales, hosting moodle, hosting wordpress, registro dominios, correo zimbra, zimbra ecuador, ecuador hosting, servidor dedicado, hosting windows, hosting linux, hosting java, net core, enlace ip, videoip, radio ip, enlaces tv, enlaces dedicados, audio sobre ip, video sobre ip, mpls ecuador, OTT ecuador"
 		/>
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
