--- a/src/pages/tv-streaming.astro
+++ b/src/pages/tv-streaming.astro
@@ -127,7 +127,7 @@ import PlayerTv from "../components/tv_streaming/PlayerTv.astro";
 
          <div class="player-tv">
             <div class="contenedor-tv-player mx-auto">
-                <iframe src="https://playerhd.eu/tv/servistream/" width="100%" height="505px" frameborder="0" scrolling="auto" allowfullscreen style="position:relative; margin:0; padding:0; top:0; left: 0;width: 100%; height: 505px;"></iframe>
+                <iframe src="https://player.streamseguro.com/tv/servistream/" width="100%" height="505px" frameborder="0" scrolling="auto" allowfullscreen style="position:relative; margin:0; padding:0; top:0; left: 0;width: 100%; height: 505px;"></iframe>
             </div>
     
         </div>
