--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ import BotonCuatro from "../components/BotonCuatro.astro";
 					</div>
 				</section>
 				<section class="mt-24">
-					<img src="/img/img_header5.avif" alt="Imagen">
+					<img class="w-full object-cover" src="/img/img_header5.avif" alt="Imagen">
 				</section>
 
 			<!-- INICIA CODIGO DE LOGOS DE CLIENTES -->
