--- a/src/pages/dominios.astro
+++ b/src/pages/dominios.astro
@@ -13,7 +13,11 @@ import BotonTres from "../components/BotonTres.astro";
 
 ---
 
-<Layout title="Hosting Internet Services | Dominios">
+<Layout 
+	title="Registro de Dominios Ecuador - ServiStream | Dominios .com .ec .net"
+	description="Registro de dominios en Ecuador. Dominios .com, .net, .org, .ec y más. Precios competitivos, gestión DNS gratuita y soporte técnico especializado."
+	keywords="dominios ecuador, registro dominios, dominios .ec, dominios .com, dns ecuador, whois privado, dominios baratos ecuador"
+>
 
     <!-- INICIA CODIGO SECCION HEADER-->
 
