--- a/src/pages/hosting-linux.astro
+++ b/src/pages/hosting-linux.astro
@@ -18,7 +18,11 @@ import Acordion from "../components/hosting_linux/Acordion.astro";
 
 ---
 
-<Layout title="Hosting Internet Services | Hosting Linux">
+<Layout 
+	title="Hosting Linux cPanel Ecuador - ServiStream | Web Hosting Compartido"
+	description="Hosting Linux con cPanel en Ecuador. CloudLinux, SSL gratis, Jetbackup incluido, servidores NvMe ultrarrápidos. Hosting web profesional desde 2014."
+	keywords="hosting linux ecuador, cpanel ecuador, hosting compartido, cloudlinux, ssl gratis, jetbackup, hosting nvme, web hosting ecuador"
+>
     <!-- INICIA CODIGO SECCION HEADER-->
 
     <header class="h-screen">
