--- a/src/pages/sonicpanel.astro
+++ b/src/pages/sonicpanel.astro
@@ -12,7 +12,11 @@ import PromocionRadio from "../components/PromocionRadio.astro";    /* CODIGO DE
 
 ---
 
-<Layout title="Hosting Internet Services | Streaming SonicPanel">
+<Layout 
+	title="Radio Streaming SonicPanel Ecuador - ServiStream | Streaming de Audio"
+	description="Radio streaming profesional con SonicPanel en Ecuador. AutoDJ, SSL incluido, hasta 320kbps, reproductores HTML5. Radio online de calidad profesional."
+	keywords="radio streaming ecuador, sonicpanel, autodj, streaming audio, radio online, mp3pro, aacplus, radio profesional ecuador"
+>
     <!-- INICIA CODIGO SECCION HEADER-->
 
     <main>
