--- a/src/pages/tv-streaming.astro
+++ b/src/pages/tv-streaming.astro
@@ -12,7 +12,11 @@ import PlayerTv from "../components/tv_streaming/PlayerTv.astro";
 
 ---
 
-<Layout title="Hosting Internet Services | Tv Streaming">
+<Layout 
+	title="TV Streaming Ecuador - ServiStream | Streaming de Televisión HD"
+	description="Servicios de TV streaming en Ecuador. Transmisión en vivo HD, adaptive bitrate, compatible con encoders profesionales. TV online de alta calidad."
+	keywords="tv streaming ecuador, streaming televisión, streaming hd, encoder video, tv online, adaptive bitrate, transmisión vivo ecuador"
+>
     <!-- INICIA CODIGO SECCION HEADER-->
 
     <main>
